- `fix • 🟡 • ` `ultima.tabs.newtabbutton.ontop.2`, the new tab button now remains under pinned tabs when there are enough opened tabs to trigger the scrollbar #301

--- a/theme/theme-xstyle.css
+++ b/theme/theme-xstyle.css
@@ -128,7 +128,9 @@ tab groups
     /*not necessary but #tabbrowser-arrowscrollbox-periphery is the container for this button*/
     #vertical-tabs-newtab-button { order: -1 !important; } 
     /*second button visible in vertical tabs expanded state*/
-    #vertical-tabs-newtab-button { order: -1 !important; }    
+    #vertical-tabs-newtab-button { order: -1 !important; }
+    /*vertical-pinned-tabs-container*/
+    #vertical-pinned-tabs-container { order: -2 !important; }
 }
 
 /* sidebar extra theming (not sidebery) -------------------------------------------------------------------- */
